# OpenBook

./: .gitignore  Cargo.toml  INVESTIGATION.md  README.md  to_do.md
src/: main.rs  micro.rs  models.rs  ui.rs  workspace.rs
tests/unit/: main_tests.rs  micro_tests.rs  models_tests.rs  ui_tests.rs  workspace_tests.rs
